Update tests to add optimizeDependencyCompilation flag