@@ -93,13 +93,14 @@ public class BuildCommandTest extends BaseCommandTest {
         Files.copy(validProjectPath, this.testResources.resolve("validProject-no-permission"));
     }
 
-    @Test(description = "Build a valid ballerina file")
-    public void testBuildBalFile() throws IOException {
+    @Test(description = "Build a valid ballerina file", dataProvider = "optimizeDependencyCompilation")
+    public void testBuildBalFile(Boolean optimizeDependencyCompilation) throws IOException {
         Path validBalFilePath = this.testResources.resolve("valid-bal-file").resolve("hello_world.bal");
 
         System.setProperty(USER_DIR_PROPERTY, this.testResources.resolve("valid-bal-file").toString());
         // set valid source root
-        BuildCommand buildCommand = new BuildCommand(validBalFilePath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(validBalFilePath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         // name of the file as argument
         new CommandLine(buildCommand).parseArgs(validBalFilePath.toString());
         buildCommand.execute();
@@ -114,7 +115,8 @@ public class BuildCommandTest extends BaseCommandTest {
         // copying the executable to a different location before deleting
         // to use for testCodeGeneratorForSingleFile test case
         Files.copy(this.testResources.resolve("valid-bal-file").resolve("hello_world.jar"),
-                this.testResources.resolve("valid-bal-file").resolve("hello_world-for-codegen-test.jar"));
+                this.testResources.resolve("valid-bal-file").resolve("hello_world-for-codegen-test.jar"),
+                StandardCopyOption.REPLACE_EXISTING);
 
         Files.delete(this.testResources
                 .resolve("valid-bal-file")
@@ -226,11 +228,12 @@ public class BuildCommandTest extends BaseCommandTest {
         }
     }
 
-    @Test(description = "Build bal file containing syntax error")
-    public void testBalFileWithSyntaxError() throws IOException {
+    @Test(description = "Build bal file containing syntax error", dataProvider = "optimizeDependencyCompilation")
+    public void testBalFileWithSyntaxError(Boolean optimizeDependencyCompilation) throws IOException {
         // valid source root path
         Path balFilePath = this.testResources.resolve("bal-file-with-syntax-error").resolve("hello_world.bal");
-        BuildCommand buildCommand = new BuildCommand(balFilePath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(balFilePath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         // non existing bal file
         new CommandLine(buildCommand).parseArgs(balFilePath.toString());
         try {
@@ -242,11 +245,12 @@ public class BuildCommandTest extends BaseCommandTest {
         }
     }
 
-    @Test(description = "Build bal package containing syntax error")
-    public void testBalProjectWithSyntaxError() throws IOException {
+    @Test(description = "Build bal package containing syntax error", dataProvider = "optimizeDependencyCompilation")
+    public void testBalProjectWithSyntaxError(Boolean optimizeDependencyCompilation) throws IOException {
         // valid source root path
         Path balFilePath = this.testResources.resolve("bal-project-with-syntax-error");
-        BuildCommand buildCommand = new BuildCommand(balFilePath, printStream, printStream, false, true);
+        BuildCommand buildCommand = new BuildCommand(balFilePath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         // non existing bal file
         new CommandLine(buildCommand).parseArgs(balFilePath.toString());
         try {
@@ -258,12 +262,12 @@ public class BuildCommandTest extends BaseCommandTest {
         }
     }
 
-
-    @Test(description = "Build a valid ballerina project")
-    public void testBuildBalProject() throws IOException {
+    @Test(description = "Build a valid ballerina project", dataProvider = "optimizeDependencyCompilation")
+    public void testBuildBalProject(Boolean optimizeDependencyCompilation) throws IOException {
         Path projectPath = this.testResources.resolve("validApplicationProject");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         // non existing bal file
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
@@ -369,11 +373,13 @@ public class BuildCommandTest extends BaseCommandTest {
                                   .resolve("pramodya-conflictProject-0.1.7.jar").toFile().exists());
     }
 
-    @Test(description = "Build a ballerina project with provided scope platform jars")
-    public void testBuildProjectWithProvidedJars() {
+    @Test(description = "Build a ballerina project with provided scope platform jars",
+            dataProvider = "optimizeDependencyCompilation")
+    public void testBuildProjectWithProvidedJars(Boolean optimizeDependencyCompilation) {
         Path projectPath = this.testResources.resolve("projectWithProvidedScope");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         new CommandLine(buildCommand).parseArgs();
         try {
             buildCommand.execute();
@@ -397,12 +403,13 @@ public class BuildCommandTest extends BaseCommandTest {
                 getOutput("project-with-provided-warning.txt"));
     }
 
-    @Test(description = "Build a valid ballerina project with java imports")
-    public void testBuildJavaBalProject() throws IOException {
+    @Test(description = "Build a valid ballerina project with java imports",
+            dataProvider = "optimizeDependencyCompilation")
+    public void testBuildJavaBalProject(Boolean optimizeDependencyCompilation) throws IOException {
         Path projectPath = this.testResources.resolve("validJavaProject");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
-        // non existing bal file
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
@@ -415,11 +422,11 @@ public class BuildCommandTest extends BaseCommandTest {
                                   .resolve("foo-winery-0.1.0.jar").toFile().exists());
     }
 
-    @Test(description = "Build a valid ballerina project")
-    public void testBuildBalProjectFromADifferentDirectory() throws IOException {
+    @Test(dataProvider = "optimizeDependencyCompilation")
+    public void testBuildBalProjectFromADifferentDirectory(Boolean optimizeDependencyCompilation) throws IOException {
         Path projectPath = this.testResources.resolve("validApplicationProject");
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
-        // non existing bal file
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         new CommandLine(buildCommand).parseArgs(projectPath.toString());
         buildCommand.execute();
         String buildLog = readOutput(true);
@@ -431,12 +438,12 @@ public class BuildCommandTest extends BaseCommandTest {
                 .resolve("foo-winery-0.1.0.jar").toFile().exists());
     }
 
-    @Test(description = "Build a valid ballerina project")
-    public void testBuildProjectWithTests() throws IOException {
+    @Test(dataProvider = "optimizeDependencyCompilation")
+    public void testBuildProjectWithTests(Boolean optimizeDependencyCompilation) throws IOException {
         Path projectPath = this.testResources.resolve("validProjectWithTests");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
-        // non existing bal file
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
@@ -448,12 +455,12 @@ public class BuildCommandTest extends BaseCommandTest {
                 .resolve("foo-winery-0.1.0.jar").toFile().exists());
     }
 
-    @Test(description = "Build a valid ballerina project")
-    public void testBuildMultiModuleProject() throws IOException {
+    @Test(dataProvider = "optimizeDependencyCompilation")
+    public void testBuildMultiModuleProject(Boolean optimizeDependencyCompilation) throws IOException {
         Path projectPath = this.testResources.resolve("validMultiModuleProject");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
-        // non existing bal file
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
@@ -477,7 +484,6 @@ public class BuildCommandTest extends BaseCommandTest {
         Path projectPath = this.testResources.resolve("validProjectWithBuildOptions");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
         BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
-        // non existing bal file
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
@@ -498,7 +504,6 @@ public class BuildCommandTest extends BaseCommandTest {
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
         BuildCommand buildCommand = new BuildCommand(
                 projectPath, printStream, printStream, false);
-        // non existing bal file
         new CommandLine(buildCommand).parseArgs();
         try {
             buildCommand.execute();
@@ -529,7 +534,6 @@ public class BuildCommandTest extends BaseCommandTest {
         System.setProperty(USER_DIR_PROPERTY, this.testResources.resolve("valid-bal-file").toString());
         BuildCommand buildCommand = new BuildCommand(
                 projectPath, printStream, printStream, false);
-        // non existing bal file
         new CommandLine(buildCommand).parseArgs();
         try {
             buildCommand.execute();
@@ -553,8 +557,7 @@ public class BuildCommandTest extends BaseCommandTest {
         Path projectPath = this.testResources.resolve("valid-bal-file").resolve("hello_world.bal");
         System.setProperty(USER_DIR_PROPERTY, this.testResources.resolve("valid-bal-file").toString());
         BuildCommand buildCommand = new BuildCommand(
-                projectPath, printStream, printStream, false);
-        // non existing bal file
+                projectPath, printStream, printStream, false, Boolean.TRUE);
         new CommandLine(buildCommand).parseArgs();
         try {
             buildCommand.execute();
@@ -659,12 +662,13 @@ public class BuildCommandTest extends BaseCommandTest {
         Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-empty-project-with-build-tools.txt"));
     }
 
-    @Test(description = "Build an empty package with tests only")
-    public void testBuildEmptyProjectWithTestsOnly() throws IOException {
+    @Test(description = "Build an empty package with tests only", dataProvider = "optimizeDependencyCompilation")
+    public void testBuildEmptyProjectWithTestsOnly(Boolean optimizeDependencyCompilation) throws IOException {
         Path projectPath = this.testResources.resolve("emptyProjectWithTestsOnly");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
 
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
@@ -856,8 +860,8 @@ public class BuildCommandTest extends BaseCommandTest {
         }
     }
 
-    @Test(description = "Build a ballerina project with the flag dump-graph")
-    public void testBuildBalProjectWithDumpGraphFlag() throws IOException {
+    @Test(dataProvider = "optimizeDependencyCompilation")
+    public void testBuildBalProjectWithDumpGraphFlag(Boolean optimizeDependencyCompilation) throws IOException {
         Path dumpGraphResourcePath = this.testResources.resolve("projectsForDumpGraph");
         BCompileUtil.compileAndCacheBala(dumpGraphResourcePath.resolve("package_c"), testDistCacheDirectory,
                 projectEnvironmentBuilder);
@@ -867,7 +871,8 @@ public class BuildCommandTest extends BaseCommandTest {
         Path projectPath = dumpGraphResourcePath.resolve("package_a");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
 
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         new CommandLine(buildCommand).parseArgs("--dump-graph");
         buildCommand.execute();
         String buildLog = readOutput(true).replaceAll("\r", "").strip();
@@ -880,8 +885,8 @@ public class BuildCommandTest extends BaseCommandTest {
         ProjectUtils.deleteDirectory(projectPath.resolve("target"));
     }
 
-    @Test(description = "Build a ballerina project with the flag dump-raw-graphs")
-    public void testBuildBalProjectWithDumpRawGraphsFlag() throws IOException {
+    @Test(dataProvider = "optimizeDependencyCompilation")
+    public void testBuildBalProjectWithDumpRawGraphsFlag(Boolean optimizeDependencyCompilation) throws IOException {
         Path dumpGraphResourcePath = this.testResources.resolve("projectsForDumpGraph");
         BCompileUtil.compileAndCacheBala(dumpGraphResourcePath.resolve("package_c"), testDistCacheDirectory,
                 projectEnvironmentBuilder);
@@ -891,7 +896,8 @@ public class BuildCommandTest extends BaseCommandTest {
         Path projectPath = dumpGraphResourcePath.resolve("package_a");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
 
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
         new CommandLine(buildCommand).parseArgs("--dump-raw-graphs");
         buildCommand.execute();
         String buildLog = readOutput(true).replaceAll("\r", "").strip();
@@ -946,8 +952,9 @@ public class BuildCommandTest extends BaseCommandTest {
                 "second code gen duration is greater than the expected value");
     }
 
-    @Test(description = "Build a valid ballerina project with a custom maven repo")
-    public void testBuildBalProjectWithCustomMavenRepo() throws IOException {
+    @Test(description = "Build a valid ballerina project with a custom maven repo",
+            dataProvider = "optimizeDependencyCompilation")
+    public void testBuildBalProjectWithCustomMavenRepo(Boolean optimizeDependencyCompilation) throws IOException {
         String username = System.getenv("publishUser");
         String password = System.getenv("publishPAT");
 
@@ -955,8 +962,9 @@ public class BuildCommandTest extends BaseCommandTest {
             Path projectPath = this.testResources.resolve("validProjectWithCustomMavenRepo");
             String content = Files.readString(projectPath.resolve("Ballerina.toml"), Charset.defaultCharset())
                     .replace("{{username}}", username).replace("{{password}}", password);
-            Files.write(projectPath.resolve("Ballerina.toml"), content.getBytes(Charset.defaultCharset()));
-            BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+            Files.writeString(projectPath.resolve("Ballerina.toml"), content, Charset.defaultCharset());
+            BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                    optimizeDependencyCompilation);
             new CommandLine(buildCommand).parseArgs(projectPath.toString());
             buildCommand.execute();
             Assert.assertTrue(projectPath.resolve("target").resolve("platform-libs").resolve("org")
@@ -986,11 +994,13 @@ public class BuildCommandTest extends BaseCommandTest {
                 testDistCacheDirectory, projectEnvironmentBuilder);
     }
 
-    @Test(description = "Build a new ballerina project without sticky flag", groups = {"proj-with-deps-update-policy"})
-    public void testBuildNewBalProjectWithoutStickyFlag() throws IOException {
+    @Test(description = "Build a new ballerina project without sticky flag", groups = {"proj-with-deps-update-policy"},
+            dataProvider = "optimizeDependencyCompilation")
+    public void testBuildNewBalProjectWithoutStickyFlag(Boolean optimizeDependencyCompilation) throws IOException {
         Path projectPath = testResources.resolve("dep-dist-version-projects").resolve("newPackage");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
 
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
@@ -1009,11 +1019,13 @@ public class BuildCommandTest extends BaseCommandTest {
         deleteDirectory(projectPath.resolve("target"));
     }
 
-    @Test(description = "Build a new ballerina project with sticky flag", groups = {"proj-with-deps-update-policy"})
-    public void testBuildNewBalProjectWithStickyFlag() throws IOException {
+    @Test(description = "Build a new ballerina project with sticky flag", groups = {"proj-with-deps-update-policy"},
+            dataProvider = "optimizeDependencyCompilation")
+    public void testBuildNewBalProjectWithStickyFlag(Boolean optimizeDependencyCompilation) throws IOException {
         Path projectPath = testResources.resolve("dep-dist-version-projects").resolve("newPackage");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
 
         new CommandLine(buildCommand).parseArgs("--sticky");
         buildCommand.execute();
@@ -1033,12 +1045,14 @@ public class BuildCommandTest extends BaseCommandTest {
     }
 
     @Test(description = "Build a project already built with an older distribution without sticky flag",
-            groups = {"proj-with-deps-update-policy"})
-    public void testBuildProjectPrecompiledWithOlderDistWithoutStickyFlag() throws IOException {
+            groups = {"proj-with-deps-update-policy"}, dataProvider = "optimizeDependencyCompilation")
+    public void testBuildProjectPrecompiledWithOlderDistWithoutStickyFlag(Boolean optimizeDependencyCompilation)
+            throws IOException {
         Path projectPath = testResources.resolve("dep-dist-version-projects").resolve("preCompiledPackage");
         replaceDependenciesTomlContent(projectPath, "**INSERT_DISTRIBUTION_VERSION_HERE**", "2201.5.0");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
 
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
@@ -1066,12 +1080,14 @@ public class BuildCommandTest extends BaseCommandTest {
     }
 
     @Test(description = "Build a project already built with an older distribution with sticky flag",
-            groups = {"proj-with-deps-update-policy"})
-    public void testBuildProjectPrecompiledWithOlderDistWithStickyFlag() throws IOException {
+            groups = {"proj-with-deps-update-policy"}, dataProvider = "optimizeDependencyCompilation")
+    public void testBuildProjectPrecompiledWithOlderDistWithStickyFlag(Boolean optimizeDependencyCompilation)
+            throws IOException {
         Path projectPath = testResources.resolve("dep-dist-version-projects").resolve("preCompiledPackage");
         replaceDependenciesTomlContent(projectPath, "**INSERT_DISTRIBUTION_VERSION_HERE**", "2201.5.0");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
 
         new CommandLine(buildCommand).parseArgs("--sticky");
         buildCommand.execute();
@@ -1098,13 +1114,15 @@ public class BuildCommandTest extends BaseCommandTest {
     }
 
     @Test(description = "Build a project already built with an U4 or older distribution without sticky flag",
-            groups = {"proj-with-deps-update-policy"})
-    public void testBuildProjectPrecompiledWithNoDistWithoutStickyFlag() throws IOException {
+            groups = {"proj-with-deps-update-policy"}, dataProvider = "optimizeDependencyCompilation")
+    public void testBuildProjectPrecompiledWithNoDistWithoutStickyFlag(Boolean optimizeDependencyCompilation)
+            throws IOException {
         Path projectPath = testResources.resolve("dep-dist-version-projects").resolve("preCompiledPackage");
         replaceDependenciesTomlContent(
                 projectPath, "distribution-version = \"**INSERT_DISTRIBUTION_VERSION_HERE**\"", "");
         System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
-        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false,
+                optimizeDependencyCompilation);
 
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
@@ -1335,9 +1353,9 @@ public class BuildCommandTest extends BaseCommandTest {
     }
 
     static class Copy extends SimpleFileVisitor<Path> {
-        private Path fromPath;
-        private Path toPath;
-        private StandardCopyOption copyOption;
+        private final Path fromPath;
+        private final Path toPath;
+        private final StandardCopyOption copyOption;
 
 
         public Copy(Path fromPath, Path toPath, StandardCopyOption copyOption) {
